Fix footer overlap bug for mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -6,6 +6,7 @@
 
 body {
   padding: 5px;
+  padding-bottom: 60px;
 }
 
 nav {
